--- a/index.html
+++ b/index.html
@@ -50,13 +50,7 @@
       <img src="image/logo.png" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Reborn Clothing</h1>
       <p class="lead">Toko Pakaian</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="1"
-          d="M0,224L48,192C96,160,192,96,288,101.3C384,107,480,181,576,197.3C672,213,768,171,864,170.7C960,171,1056,213,1152,218.7C1248,224,1344,192,1392,176L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
+       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,224L1440,160L1440,0L0,0Z"></path></svg>
     </section>
     <!-- akhir jumbotron -->
 
